test/error/tablesort.luau
local t = { 9, 8, 7, 6 }

table.sort(t, function(a, b) return 1 end)
